headLamp/configuration/helm-headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Tells Traefik to look for traffic on both the non-secure and secure entry points
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
spec:
  ingressClassName: traefik
  rules:
    - host: headlamp.trsd.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
  tls:
    - hosts:
        - headlamp.trsd.tech
      secretName: headlamp-tls-cert
